<resources>
    <string name="app_name">Accident Alert</string>

    <!-- Chooser -->
    <string name="title_auth_activity">Auth UI demo</string>
    <string name="title_firestore_activity">Cloud Firestore Demo</string>
    <string name="title_realtime_database_activity">Real-time database demo</string>
    <string name="title_storage_activity">Storage Image Demo</string>

    <string name="desc_auth">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="desc_firestore">Demonstrates using a FirestoreRecyclerAdapter to load data from Cloud Firestore into a RecyclerView for a basic chat app.</string>
    <string name="desc_realtime_database">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_storage">Demonstrates displaying an image from Cloud Storage using Glide.</string>

    <!-- Auth UI -->
    <string name="launch_title">Accident Alert</string>
    <string name="sign_in">Sign In</string>

    <string name="use_theme_header">Use theme:</string>
    <string name="default_theme">Default theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="green_theme">Green Theme</string>
    <string name="dark_theme">Dark Theme</string>

    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>

    <string name="auth_providers_header">Use auth providers:</string>
    <string name="google_label">Google</string>
    <string name="facebook_label">Facebook</string>
    <string name="twitter_label">Twitter</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>

    <string name="configuration_required">Configuration is required - see README.md</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="twitter_label_missing_config">Twitter - configuration missing</string>

    <string name="tos_header">Terms of Service URL:</string>
    <string name="google_tos_label">Google TOS</string>
    <string name="firebase_tos_label">Firebase TOS</string>

    <string name="privacy_policy_header">Privacy Policy URL:</string>
    <string name="google_privacy_label">Google Privacy Policy</string>
    <string name="firebase_privacy_label">Firebase Privacy Policy</string>

    <string name="extra_google_scopes">Example extra Google scopes</string>
    <string name="drive_file_scope">Drive File</string>
    <string name="youtube_data_scope">Youtube data</string>

    <string name="extra_facebook_scopes">Example extra Facebook scopes</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>

    <string name="other_options_header">Other Options:</string>
    <string name="enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="allow_new_email_acccount">Allow account creation if email does not exist.</string>
    <string name="require_name">Require first/last name with email accounts.</string>

    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>


    <!-- Storage -->
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>

    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>

    <!-- Database -->
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in">Signed In</string>
    <string name="anonymous_auth_failed_msg">
        Anonymous authentication failed, various components of the demo will not work.
        Make sure your device is online and that Anonymous Auth is configured in your Firebase project
        (https://console.firebase.google.com/project/_/authentication/providers)
    </string>

    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">soulr27@gmail.com</string>
    <string name="firebase_password" translatable="false">123456</string>
    <string name="emergency_no_1">Emergency no. 1 :</string>
    <string name="emergency_no_2">Emergency no. 2 :</string>
    <string name="emergency_no_3">Emergency no. 3 :</string>
    <string name="emergency_no_4">Emergency no. 4 :</string>
    <string name="emergency_no_5">Emergency no. 5 :</string>
    <string name="msg_content">Msg content</string>
    <string name="massage_to_send">Massage to send :</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="ok">OK</string>
    <string name="enter_msg_here">Enter Msg here</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="force">Force :</string>
    <string name="x_axis">X-axis :</string>
    <string name="change_number">Change Phone No.</string>
    <string name="change_msg">Change Msg</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch</string>
    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="location">location</string>
    <string name="address">Address :</string>

</resources>
